Doc: improve the documentation for Popup’s modal property

Task-number: QTBUG-60358
Change-Id: I935722f0740140c30ff27192d78c6cf3586723c5
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>